# voice_agent_back

./: .gitignore  Dockerfile  README.md  assembly_ai.py  markets.json  pyproject.toml
trading_backend/: __init__.py  main.py
trading_backend/llm_agent/: agent.py
uploads/: 78ddd185987d43c5bcc66bd158fe2b58_recording.webm
