[project]
name = "trading-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ali", email = "ali7676.kavari@gmail.com" }
]
dependencies = [
    "fastapi[standard]",
    "assemblyai",
    "pydantic",
    "openai",
    "aiofiles>=24.1.0",
    "deepgram-sdk",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"voice-agent" = "trading_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["trading_backend"]

[tool.rye.scripts]
start = "python3.10 ./trading_backend/main.py"

